# SmartDB_MCP

./: Dockerfile  README-zh.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/config/: .env  database_config.json  dbconfig.py
src/connection/: MultiDBPoolManager.py  connection_pool.py  execute_sql_util.py  pool_creator.py  pool_manager.py
src/core/: exceptions.py  server.py
src/core/handles/: DatabaseFactory.py  ToolHandler.py  __init__.py
src/core/tools/: ExecuteSQLTool.py  ToolsBase.py  __init__.py
src/databases/: __init__.py  database_factory.py
src/databases/base/: base.py
src/databases/dameng/: dameng_db_version.py  dameng_factory.py  dameng_health.py  dameng_optimize.py  dameng_queries.py  dameng_table_description.py  dameng_table_index.py  dameng_table_name.py
src/databases/mssqlserver/: mssqlserver_db_version.py  mssqlserver_health.py  mssqlserver_optimize.py  mssqlserver_queries.py  mssqlserver_table_description.py  mssqlserver_table_index.py  mssqlserver_table_name.py  sqlserver_factory.py
src/databases/mysql/: mysql_db_version.py  mysql_factory.py  mysql_health.py  mysql_optimize.py  mysql_queries.py  mysql_table_description.py  mysql_table_index.py  mysql_table_name.py
src/databases/oracle/: oracle_db_version.py  oracle_factory.py  oracle_health.py  oracle_optimize.py  oracle_queries.py  oracle_table_description.py  oracle_table_index.py  oracle_table_name.py
src/databases/postgresql/: postgresql_db_version.py  postgresql_factory.py  postgresql_health.py  postgresql_optimize.py  postgresql_queries.py  postgresql_table_description.py  postgresql_table_index.py  postgresql_table_name.py
src/datebases/mysql/tools/: MySQLToolHandler.py
src/oauth/: __init__.py  middleware.py  oauth_config.py  routes.py  token_handler.py
src/static/login/: config.js  index.html
src/static/login/assets/: DashboardView-9e47e67f.js  DashboardView-9ed3e0c5.js  DashboardView-ab08c66d.css  LoginView-472128f2.css  LoginView-6953b783.css  LoginView-85be1458.js  LoginView-e3dd39fe.js  PermissionManagement-74d8fac2.css  PermissionManagement-7b3111af.js  TokenManagement-4e97c077.js  TokenManagement-b6094492.css  TokenManagement-e853d6a2.js  UserProfile-1ca2b214.js  UserProfile-8f25f281.js  UserProfile-a1c5eebb.css  crypto-c81baed6.js  index-6734ca5b.js  index-81d204e5.js  index-ff610c68.css  vendor-7090ffab.js
src/tools/: __init__.py  base.py  get_db_health.py  get_db_version.py  get_table_desc.py  get_table_index.py  get_table_name.py  sql_creator.py  sql_executor.py  sql_optimize.py
src/utils/: execute_sql_util.py
