[project]
name = "SmartDB_MCP"
version = "1.0.0"
license = { text = "MIT" }
description = "Support for SSE, STDIO in MySQL MCP server, includes CRUD, database anomaly analysis capabilities .支持SSE，STDIO；不仅止于mysql的增删改查功能； 还包含了数据库异常分析能力；且便于开发者们进行个性化的工具扩展"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.8.0",
    "python-dotenv>=1.1.0",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "PyJWT>=2.8.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.10",
    "oracledb>=3.3.0",
    "cx_Oracle>=8.3.0",
    "pymssql>=2.3.7",
    "pyodbc >=5.2.0",
    "pydantic-settings~=2.10.1",
    "click~=8.2.1"
]

[[project.authors]]
name = "wenb1n"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
packages = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

