[project]
name = "SmartDB_MCP"
version = "1.0.0"
license = { text = "MIT" }
description = "SmartDB is a universal database gateway that implements the Model Context Protocol (MCP) server interface.SmartDB not only provides basic database connection and exploration capabilities but also adds advanced features such as OAuth 2.0 authentication , health checks, SQL optimization, and index health detection, making database management and maintenance more secure and intelligent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.8.0",
    "python-dotenv>=1.1.0",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "PyJWT>=2.8.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.10",
    "oracledb>=3.3.0",
    "cx_Oracle>=8.3.0",
    "pymssql>=2.3.7",
    "pyodbc >=5.2.0",
    "pydantic-settings~=2.10.1",
    "click~=8.2.1"
]

[[project.authors]]
name = "wenb1n"

[project.scripts]
smartdb = "core.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
packages = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/config", "src/connection", "src/tools", "src/oauth", "src/utils", "src/databases"]

[project.urls]
Homepage = "https://github.com/wenb1n-dev/SmartDB_MCP"
Documentation = "https://github.com/wenb1n-dev/SmartDB_MCP/blob/main/README.md"
Repository = "https://github.com/wenb1n-dev/SmartDB_MCP.git"